--- a/data/indicator-bluetooth.conf.in
+++ b/data/indicator-bluetooth.conf.in
@@ -6,4 +6,4 @@ stop on desktop-end or indicator-services-end
 respawn
 respawn limit 2 10
 
-exec @pkglibexecdir@/indicator-bluetooth-service
+exec $SNAP@pkglibexecdir@/indicator-bluetooth-service
