--- a/data/indicator-bluetooth.service.in
+++ b/data/indicator-bluetooth.service.in
@@ -1,8 +1,11 @@
 [Unit]
 Description=Indicator Bluetooth Backend
 PartOf=graphical-session.target
-After=indicators-pre.target
+PartOf=indicators.target
 
 [Service]
 ExecStart=@pkglibexecdir@/indicator-bluetooth-service
 Restart=on-failure
+
+[Install]
+WantedBy=indicators.target
