--- a/debian/rules
+++ b/debian/rules
@@ -3,7 +3,7 @@
 export DPKG_GENSYMBOLS_CHECK_LEVEL=4
 
 %:
-	dh $@ --with translations,autoreconf
+	dh $@ --with autoreconf,systemd,translations
 
 override_dh_autoreconf:
 	NOCONFIGURE=1 dh_autoreconf ./autogen.sh
